--- a/Client/Pages/UserBadge.razor
+++ b/Client/Pages/UserBadge.razor
@@ -3,7 +3,7 @@
 @inject MainViewModel MainViewModel
 
 <MatDialog @bind-IsOpen="@MainViewModel.UserDataEditorViewModel.IsUserDataEditorOpen" CanBeClosed="false">
-  <MatDialogTitle>Display Name and Avatar</MatDialogTitle>
+  <MatDialogTitle>Select Avatar</MatDialogTitle>
   <MatDialogContent>
     <UserDataEditor />
   </MatDialogContent>
