--- a/Client/Pages/Main.razor
+++ b/Client/Pages/Main.razor
@@ -12,7 +12,7 @@
       </td>
       <td style="width: 80%;">
         <div style="text-align: center; display: inline-block; width: 100%;">
-          <MatHeadline5 style="font-family: font-family: 'Times New Roman', Times, serif;"><img src="poker.png" width=32
+          <MatHeadline5 style="font-family: font-family: 'Times New Roman', Times, serif;"><img src="images/poker.png" width=32
             height=32 /> The Market Maker's Poker</MatHeadline5>
         </div>
       </td>
