--- a/Client/Pages/Console.razor
+++ b/Client/Pages/Console.razor
@@ -3,7 +3,7 @@
 @using Lib
 @using MarketMakingGame.Shared.Messages
 @using MarketMakingGame.Shared.Models
-@inject MainViewModel MainViewModel
+@inject MainPageViewModel MainViewModel
 
 <div class="form-group">
   <label>
