--- a/Client/Pages/GameManager.razor
+++ b/Client/Pages/GameManager.razor
@@ -1,6 +1,6 @@
 @implements IDisposable
 @using Lib
-@inject MainViewModel MainViewModel
+@inject MainPageViewModel MainViewModel
 
 <MatDialog @bind-IsOpen="@ViewModel.IsCreateGameFailedDialogVisible">
   <MatDialogTitle>
