--- a/Client/Pages/UserDataEditor.razor
+++ b/Client/Pages/UserDataEditor.razor
@@ -1,6 +1,6 @@
 @implements IDisposable
 @using MarketMakingGame.Client.Lib
-@inject MainViewModel MainViewModel
+@inject MainPageViewModel MainViewModel
 
 <div class="mat-layout-grid">
   <div class="mat-layout-grid-inner">
